--- a/src/app/views/portfolio/portfolio.component.html
+++ b/src/app/views/portfolio/portfolio.component.html
@@ -27,5 +27,7 @@
           </div>
       </div>
 
+
   </div>
+  <a href="https://github.com/mizan8102" class="more_project">More Project</a>
 </section>
