--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -12,9 +12,7 @@
               A Full Stack Developer.
           </h1>
           <p>
-              I'm a Web Developer, I love to create beautiful and functional websites.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+              I'm a programmer,designer and devloper, in other words a creative technologist.
           </p>
           <div class="btn-con">
               <a href="../../../assets/img/ResumeMizan.pdf" target="_blank" class="main-btn">
