--- a/src/_media.scss
+++ b/src/_media.scss
@@ -200,6 +200,9 @@
 }
 
 @media screen and (max-width:1070px){
+  .icon_mobile{
+    display: block;
+  }
   .about-container{
       grid-template-columns: repeat(1, 1fr);
       .right-about{
@@ -220,6 +223,9 @@
 }
 
 @media screen and (max-width:970px){
+  .icon_mobile{
+    display: block;
+  }
   .container{
       padding: 7rem 6rem;
   }
@@ -254,6 +260,9 @@
   }
 }
 @media screen and (max-width:700px){
+  .icon_mobile{
+    display: none;
+  }
   .container{
       padding: 7rem 3rem;
   }
