--- a/src/app/views/portfolio/portfolio.component.html
+++ b/src/app/views/portfolio/portfolio.component.html
@@ -5,29 +5,47 @@
   <p class="port-text">
       Here is some of my work that I've done in various programming languages.
   </p>
+  <div class="tab-button">
+    <button (click)="catagory('web')"  [class]="selectBtn ==='web'?'primary ':'primary ghost'" style="margin-left: 5px;">
+      <i class="fas fa-globe " ></i><span class="icon_mobile"> Web Application</span>
+    </button>
+    <button  (click)="catagory('android')"  [class]="selectBtn ==='android'?'primary ':'primary ghost'" style="margin-left: 5px;">
+      <i class="fab fa-android " ></i> <span class="icon_mobile"> Android Application</span>
+    </button>
+    <button  (click)="catagory('desktop')" [class]="selectBtn ==='desktop'?'primary ':'primary ghost'" style="margin-left: 5px;">
+      <i class="fas fa-desktop " ></i> <span class="icon_mobile"> Desktop Application</span>
+    </button>
+    <button  (click)="catagory('others')"  [class]="selectBtn ==='others'?'primary ':'primary ghost'" style="margin-left: 5px;">
+      <i class="fas fa-microchip"></i> <span class="icon_mobile"> Others </span>
+    </button>
+  </div>
   <div class="portfolios">
-      <div class="portfolio-item" *ngFor="let work of works">
-          <div class="image">
-              <img [src]="work.image" alt="">
-          </div>
-          <div class="hover-items">
-              <h3>{{ work.name }}</h3>
-              <span style="margin-bottom: 3px;">{{ work.languages }}</span>
-              <div class="icons">
-                  <a [href]="work.git" class="icon">
-                      <i class="fab fa-github"></i>
-                  </a>
-                  <a href="#" class="icon">
-                      <i class="fab fa-eye"></i>
-                  </a>
-                  <!-- <a href="#" class="icon">
-                      <i class="fab fa-youtube"></i>
-                  </a> -->
-              </div>
-          </div>
-      </div>
+
+<div class="card-container" *ngFor="let work of resultQuery">
+    <span class="pro">{{ work.catagory }}</span>
+    <img [src]="work.image" alt="">
+    <h3>{{ work.name }}</h3>
+    <!-- <h6>Nodia, U.P.</h6> -->
+    <p>{{ work.subtitle }}</p>
+    <div class="buttons">
+        <a [href]="work.git" target="_blank" class="primary">
+          <i class="fab fa-github"></i> Github
+        </a>
+        <a *ngIf="work.live" [href]="work.live" target="_blank" class="primary ghost">
+          <i class="fas fa-eye"></i> Live
+        </a>
+    </div>
+    <div class="skills">
+        <h6>Technlogy</h6>
+        <ul>
+            <li *ngFor="let lan of work.language">{{ lan }}</li>
+
+        </ul>
+    </div>
 
 
+
+  </div>
   </div>
   <a href="https://github.com/mizan8102" class="more_project">More Project</a>
 </section>
