--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -53,7 +53,7 @@
                           <span>Languages</span>
                       </div>
                       <p>
-                          <span>: Banla, English</span>
+                          <span>: Bengali, English</span>
                       </p>
                   </div>
               </div>
