--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -105,27 +105,28 @@
     </div>
     <h4 class="stat-title">My Timeline</h4>
     <div class="timeline">
+      <div class="timeline-item">
+        <div class="tl-icon">
+            <i class="fas fa-briefcase"></i>
+        </div>
+        <p class="tl-duration">2022 - Present</p>
+        <h5>Software Developer<span> - ZIT Solution</span></h5>
+        <p>
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit. -->
+        </p>
+    </div>
+
         <div class="timeline-item">
             <div class="tl-icon">
                 <i class="fas fa-briefcase"></i>
             </div>
-            <p class="tl-duration">2021 - present</p>
-            <h5>Web Developer<span> - Universal Technology Corporation</span></h5>
+            <p class="tl-duration">2021 - 2022</p>
+            <h5>Software Developer<span> - Universal Technology Corporation</span></h5>
             <p>
               <!-- message -->
             </p>
         </div>
-        <!-- <div class="timeline-item">
-            <div class="tl-icon">
-                <i class="fas fa-briefcase"></i>
-            </div>
-            <p class="tl-duration">2008 - 2011</p>
-            <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-            </p>
-        </div>
-        -->
+
     </div>
 </section>
 </main>
