--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -15,7 +15,8 @@
               I'm a programmer,designer and devloper, in other words a creative technologist.
           </p>
           <div class="btn-con">
-              <a href="../../../assets/img/ResumeMizan.pdf" target="_blank" class="main-btn">
+<!--             ../../../assets/img/ResumeMizan.pdf -->
+              <a href="#" target="_blank" class="main-btn">
                   <span class="btn-text">Download CV</span>
                   <span class="btn-icon"><i class="fas fa-download"></i></span>
               </a>
