--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -35,7 +35,7 @@
                           <span>Education</span>
                       </div>
                       <p>
-                          <span>: Feni Polytechnic Institute,Feni</span>
+                          <span>: Southeast University</span>
                       </p>
                   </div>
                   <div class="contact-item">
