--- a/src/app/views/portfolio/portfolio.component.html
+++ b/src/app/views/portfolio/portfolio.component.html
@@ -36,7 +36,7 @@
         </a>
     </div>
     <div class="skills">
-        <h6>Technlogy</h6>
+        <h6>Technology</h6>
         <ul>
             <li *ngFor="let lan of work.language">{{ lan }}</li>
 
