--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <i [class]="menu.icon"></i>
     </div>
 </div>
-<div class="theme-btn" (click)="isNight= !isNight">
+<!-- <div class="theme-btn" (click)="isNight= !isNight">
     <i class="fas fa-adjust"></i>
-</div>
+</div> -->
 </div>
