--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -17,7 +17,7 @@
                           <span>Location</span>
                       </div>
                       <p>
-                          : 287,Doctor Para,Feni Sadar,Feni
+                          : Uttara, Dhaka
                       </p>
                   </div>
                   <div class="contact-item">
@@ -44,7 +44,7 @@
                           <span>Mobile Number</span>
                       </div>
                       <p>
-                          <span>: 01645316379</span>
+                          <span>: +88 01645316379</span>
                       </p>
                   </div>
                   <div class="contact-item">
@@ -53,7 +53,7 @@
                           <span>Languages</span>
                       </div>
                       <p>
-                          <span>: Bengali, English</span>
+                          <span>: Bangla, English</span>
                       </p>
                   </div>
               </div>
