--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -16,7 +16,7 @@
           </p>
           <div class="btn-con">
 <!--             ../../../assets/img/ResumeMizan.pdf -->
-              <a href="#" target="_blank" class="main-btn">
+              <a href="https://mizan8102.github.io/cv_design/" target="_blank" class="main-btn">
                   <span class="btn-text">Download CV</span>
                   <span class="btn-icon"><i class="fas fa-download"></i></span>
               </a>
