--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -10,7 +10,7 @@
               I am a positive, enthusiastic and competent Web Developer who, over the years, has built up a diverse range of skills, qualities and attributes that guarantee I will perform highly in this role. I have extensive experience working both alone and as part of a team on often time-sensitive, challenging web development projects that require outstanding creative and technical capabilities and the ability to ensure all work is optimized across a wide range of platforms. I take my work as a Web Developer seriously and this means I always ensure my skills are kept up to date within this rapidly changing industry.
             </p>
             <div class="btn-con">
-                <a href="https://mizan8102.github.io/cv_design" class="main-btn">
+                <a href="https://mizan8102.github.io/cv_design" target="_blank" class="main-btn">
                     <span class="btn-text">Download CV</span>
                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                 </a>
