--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -84,7 +84,7 @@
                       <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                   </div>
                   <div class="submit-btn">
-                      <a href="https://mizan8102.github.io/cv_design" class="main-btn">
+                      <a href="https://mizan8102.github.io/cv_design" target="_blank" class="main-btn">
                           <span class="btn-text">Download CV</span>
                           <span class="btn-icon"><i class="fas fa-download"></i></span>
                       </a>
