--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -12,7 +12,7 @@
               A Full Stack Developer.
           </h1>
           <p>
-              I'm a programmer,designer and devloper, in other words a creative technologist.
+              I'm a programmer,designer and developer, in other words a creative technologist.
           </p>
           <div class="btn-con">
 <!--             ../../../assets/img/ResumeMizan.pdf -->
