--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -3,7 +3,7 @@
       <div class="left-header">
           <div class="h-shape"></div>
           <div class="image">
-              <img src="../../../assets/img/hero.png" alt="">
+              <img src="../../../assets/img/mizan.jpeg" alt="">
           </div>
       </div>
       <div class="right-header">
